--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
         <a href="#" class="btn">add to cart</a>
       </div>
       <div class="box">
+        <img src="https://i.pinimg.com/236x/60/58/51/605851f44124b12774223f138d755d21.jpg" alt="" id="classImg">
+        <h3>Espresso</h3>
+        <div class="price">$15.99 <span>20.99</span></div>
+        <a href="#" class="btn">add to cart</a>
+      </div>    
+      <div class="box">
         <img src="https://i.pinimg.com/236x/01/a7/29/01a729e7989964da099a7f86b3522c3a.jpg" alt="" id="classImg">
         <h3>Americano</h3>
         <div class="price">$15.99 <span>20.99</span></div>
